chore: adding POST method for exchange continuation and marking PUT as deprecated (#8)
* chore: adding POST method for exchange continuation and marking PUT as deprecated

* chore: marking `VcApiController.continueExchange` method as private
